[gd_scene load_steps=9 format=3 uid="uid://c7iai2j4k5l6m"]

[ext_resource type="Script" uid="uid://bardgqtphpuyt" path="res://commons/primitives/cubes/ProjectileCube.gd" id="1_projectile"]

[sub_resource type="BoxMesh" id="BoxMesh_projectile"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_projectile"]
albedo_color = Color(1, 0.2, 0, 1)
metallic = 0.3
roughness = 0.7
emission_enabled = true
emission = Color(1, 0.5, 0, 1)
emission_energy_multiplier = 1.5

[sub_resource type="BoxShape3D" id="BoxShape3D_main"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_hit_area"]
size = Vector3(0.6, 0.6, 0.6)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_trail"]
direction = Vector3(0, 0, 1)
initial_velocity_min = 1.0
initial_velocity_max = 3.0
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.15

[sub_resource type="SphereMesh" id="SphereMesh_trail"]
radius = 0.03
height = 0.06

[sub_resource type="AudioStream" id="AudioStream_hit_placeholder"]

[node name="ProjectileCube" type="RigidBody3D"]
collision_layer = 4
collision_mask = 1049601
gravity_scale = 0.1
continuous_cd = true
script = ExtResource("1_projectile")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_projectile")
surface_material_override/0 = SubResource("StandardMaterial3D_projectile")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_main")

[node name="HitArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 1048576

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitArea"]
shape = SubResource("BoxShape3D_hit_area")

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="TrailParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.3)
amount = 20
process_material = SubResource("ParticleProcessMaterial_trail")
draw_pass_1 = SubResource("SphereMesh_trail")

[node name="HitSound" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStream_hit_placeholder")
volume_db = -12.0
max_distance = 25.0
